Fix video js, video-resolution

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "puppeteer": "^2.1.1"
+    "path": "^0.12.7",
+    "puppeteer": "^2.1.1",
+    "videojs-resolution-switcher": "^0.4.2"
   }
 }
